...
            "state" : "translated",
            "value" : "键盘布局"
          }
        }
      }
    },
    "demo.liveRoom.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "غرفة البث"
...
            "value" : "People here now"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "当前在线"
          }
        }
      }
    },
    "liveRoom.business.command.failure.message" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "豪华"
          }
        }
      }
    },
    "liveRoom.gift.category.multiple" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تأثيرات متعددة"
...
            "state" : "translated",
            "value" : "浪漫"
          }
        }
      }
    },
    "liveRoom.gift.category.svga" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "SVGA"
...
            "state" : "translated",
            "value" : "萌萌花束"
          }
        }
      }
    },
    "liveRoom.gift.item.flowerDuet" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تناغم الأزهار"
...
            "state" : "translated",
            "value" : "送给谁"
          }
        }
      }
    },
    "liveRoom.gift.selectAll" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تحديد الكل"
...
