...

        subtitleLabel.font = .preferredFont(forTextStyle: .caption1)
        subtitleLabel.textColor = UIColor.white.withAlphaComponent(0.72)
        subtitleLabel.adjustsFontForContentSizeCategory = true
        subtitleLabel.numberOfLines = 1

        audienceButton.accessibilityIdentifier = "liveRoom.audience.button"
        audienceButton.action = { [weak self] in
            self?.audienceDidTap?()
        }

        moreImageView.tintColor = .white
        moreImageView.contentMode = .scaleAspectFit
...
